Prevented table content from dropping and hidden the scrollbar

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -134,6 +134,7 @@ video::-webkit-media-controls {
         text-align: center;
         vertical-align: middle;
         font-size: 0.9rem;
+        white-space: nowrap;
     }
 
     th {
@@ -223,5 +224,11 @@ video::-webkit-media-controls {
     }
     >span {
         font-size: 0.85rem;
+    }
+}
+
+.tableContainerBox{
+    ::-webkit-scrollbar{
+        display: none;
     }
 }
